[1.538] update links for PORTS

--- a/faq/index.html
+++ b/faq/index.html
@@ -36,12 +36,12 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
   <tr>
     <td><a href="https://www.openbsd.org/faq/faq10.html#Patches" >Security обновления</a></td>
     <td><a href="https://man.openbsd.org">man-cтраницы</a></td>
-    <td><a href="https://www.openbsd.org/faq/ports/index.html"   >Книга по портам</a></td>
+    <td><a href="ports/index.html"   >Книга по портам</a></td>
   </tr>
   <tr>
     <td><a href="https://www.openbsd.org/faq/upgrade65.html"     >Обновление до 6.5</a></td>
     <td><a href="https://www.openbsd.org/mail.html"              >Почтовые рассылки</a></td>
-    <td><a href="https://www.openbsd.org/faq/ports/testing.html" >Тестирование портов</a></td>
+    <td><a href="ports/testing.html" >Тестирование портов</a></td>
   </tr>
   <tr>
     <td><a href="https://www.openbsd.org/faq/current.html"       >Использование -current</a></td>
