--- a/faq/ports/testing.html
+++ b/faq/ports/testing.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang=en>
+<html lang=ru>
 
 <!-- If you make edits to any FAQ documents, please start each sentence
  on a new line, and try to keep the general formatting consistent
  with the rest of the pages -->
 
-<title>OpenBSD Ports: Testing Guide</title>
+<title>Порты OpenBSD: руководство по тестированию</title>
 <meta name= "description"   content= "OpenBSD Porting Guide">
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,23 +15,23 @@
 <h2 id=OpenBSD>
 <a href="../../index.html">
 <i>Open</i><b>BSD</b></a>
-Ports - Testing Guide
+Порты - руководство по тестированию
 <small>
-<a href="index.html">[Handbook Index]</a>
+<a href="index.html">[На главную]</a>
 </small>
 </h2>
 <hr>
 
 <ul>
-  <li><a href="#Introduction">Introduction</a>
-  <li><a href="#Testing"     >Testing</a>
-  <li><a href="#Commenting"  >Commenting</a>
-  <li><a href="#More"        >More Testing</a>
+  <li><a href="#Introduction">Введение</a>
+  <li><a href="#Testing"     >Тестирование</a>
+  <li><a href="#Commenting"  >Комментирование</a>
+  <li><a href="#More"        >И снова тестирование</a>
 </ul>
 
 <hr>
 
-<h2 id="Introduction">Introduction</h2>
+<h2 id="Introduction">Введение</h2>
 
 The <a href="ports.html">ports tree</a> is a huge piece of work
 that permits OpenBSD users to use third party programs without wasting time
@@ -61,7 +61,7 @@ mailing lists.
 This way, you will be notified about new or updated ports and about changes
 in the ports tree.
 
-<h2 id="Testing">Testing</h2>
+<h2 id="Testing">Тестирование</h2>
 
 There are two types of submissions on the mailing lists: new ports and updates.
 New ports are generally posted as tarball attachments or URLs.
@@ -253,7 +253,7 @@ Remaining <code>pkg/</code> files like <code>DESCR</code> and
 Paragraphs should be formatted using
 <a href="https://man.openbsd.org/fmt">fmt(1)</a> and wrapped at 80 characters.
 
-<h2 id="Commenting">Commenting</h2>
+<h2 id="Commenting">Комментирование</h2>
 
 At the end of the test comes the really important thing: comments.
 Even if the port is working fine comments must be done.
@@ -278,7 +278,7 @@ also be tested, to check whether they are still working correctly.
 The <code>show-required-by</code> make target will help to find other ports
 which depend on the current one.
 
-<h2 id="More">More Testing</h2>
+<h2 id="More">И снова тестирование</h2>
 
 Check the port's <code>Makefile</code> for correct dependencies, typos,
 incorrect links, useless or missing variables, correct licensing and categories.
