[1.538] update links to local faq1

--- a/faq/index.html
+++ b/faq/index.html
@@ -53,15 +53,15 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <p>
 <hr>
 
-<h3><a href="https://www.openbsd.org/faq/faq1.html">Введение в OpenBSD</a></h3>
+<h3><a href="faq1.html">Введение в OpenBSD</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq1.html#WhatIs"     >Что такое OpenBSD</a>
-<li><a href="https://www.openbsd.org/faq/faq1.html#Platforms"  >Поддерживаемое железо</a>
-<li><a href="https://www.openbsd.org/faq/faq1.html#ManPages"   >Страницы руководств</a>
-<li><a href="https://www.openbsd.org/faq/faq1.html#MailLists"  >Список почтовых рассылок</a>
-<li><a href="https://www.openbsd.org/faq/faq1.html#OtherUnixes">Переход на OpenBSD</a>
-<li><a href="https://www.openbsd.org/faq/faq1.html#Bugs"       >Отправка сообщений об ошибках</a>
-<li><a href="https://www.openbsd.org/faq/faq1.html#Support"    >Поддержика проекта</a>
+<li><a href="faq1.html#WhatIs"     >Что такое OpenBSD</a>
+<li><a href="faq1.html#Platforms"  >Поддерживаемое железо</a>
+<li><a href="faq1.html#ManPages"   >Страницы руководств</a>
+<li><a href="faq1.html#MailLists"  >Список почтовых рассылок</a>
+<li><a href="faq1.html#OtherUnixes">Переход на OpenBSD</a>
+<li><a href="faq1.html#Bugs"       >Отправка сообщений об ошибках</a>
+<li><a href="faq1.html#Support"    >Поддержка проекта</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq4.html">Руководство по установке</a></h3>
