--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -407,8 +407,8 @@ OpenBSD.
       вопросы от других пользователей.
   <li>Помогать поддерживать документацию и присылать новый материал для FAQ на адрес
       <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
-  <li>Организовать локальную <a href="../groups.html">группу пользователей</a> and get your friends
-      hooked on OpenBSD.
+  <li>Организовать локальную <a href="../groups.html">группу пользователей</a> показать
+      друзьям на сколько OpenBSD классная система.
   <li>Обратиться к работодателю с просьбой использовать OpenBSD для работы.
       Если вы студент, то обсудить с преподавателями возможность использования OpenBSD в качестве
       учебного инструмента для компьютерных или инженерных курсов.
