--- a/openbgpd/mail.html
+++ b/openbgpd/mail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenBGPD: Mailing Lists</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenBGPD: Почтовые рассылки</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD Mailing lists">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
@@ -14,31 +14,32 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">BGPD</font></a>
-<font color="#e00000">Mailing Lists</font>
+<font color="#e00000">Почтовые рассылки</font>
 </h2>
 <hr>
 
-<h2>General OpenBGPD user discussion list</h2>
+<h2>Основная рассылка пользователей OpenBGPD</h2>
 
-General purpose discussions, issues and ideas may be discussed on our
-<a href="mailto:users@openbgpd.org">users@openbgpd.org</a> list.
+Основная рассылка для обсуждений, вопросов, идей и предложений это 
+<a href="mailto:users@openbgpd.org">users@openbgpd.org</a>.
 
 <p>
-To subscribe, send mail to
+Чтобы подписаться на нее, просто отошли письмо на
 <a href="mailto:majordomo@openbgpd.org">majordomo@openbgpd.org</a>
-with "subscribe users" as the message body.
+с текстом "subscribe users".
 
 <p>
-Most development will be done either on
-<a href="https://github.com/openbgpd-portable/openbgpd-portable">Github</a>
-for the portable branch, or on the
-<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&extra=tech">OpenBSD tech</a> mailing list.
-Bugs should be submitted to either Github or the
-<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&extra=bugs">OpenBSD bugs</a> mailing list.
+Для разработки портированной версии может использоваться любо
+<a href="https://github.com/openbgpd-portable/openbgpd-portable">Github</a>,
+либо рассылка
+<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&extra=tech">OpenBSD tech</a>.
+О найденных ошибках можно сообщить либо в вышеупомянутый GitHub-проект,
+либо написать письмо (на английском естественно) в рассылку
+<a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&extra=bugs">OpenBSD bugs</a>.
 
 <p>
-See the <a href="https://www.openbsd.org/mail.html">OpenBSD mailing list page</a>
-for more details.
+Больше информации по этой теме можно найти на <a href="https://www.openbsd.org/mail.html">
+OpenBSD mailing list page</a>.
 
 <p>
 </body>
