[1.538] better wording for faq5

--- a/faq/index.html
+++ b/faq/index.html
@@ -103,13 +103,13 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <h3><a href="faq5.html">Собираем систему из исходников</a></h3>
 <ul>
 <li><a href="faq5.html#Flavors"    >OpenBSD's Flavors</a>
-<li><a href="faq5.html#Snapshots"  >Development Snapshots</a>
+<li><a href="faq5.html#Snapshots"  >Разрабатываемые Snapshot'ы</a>
 <li><a href="faq5.html#Bld"        >Собираем OpenBSD из исходников</a>
 <li><a href="faq5.html#Release"    >Making a Release</a>
 <li><a href="faq5.html#Xbld"       >Собираем X</a>
 <li><a href="faq5.html#buildprobs" >Распростаненные проблемы при компиляции</a>
 <li><a href="faq5.html#Miscellanea">Разные вопросы и советы</a>
-<li><a href="faq5.html#Custom"     >Custom Kernels</a>
+<li><a href="faq5.html#Custom"     >Собственное ядро</a>
 <li><a href="faq5.html#Diff"       >Подготовка Diff</a>
 </ul>
 
