--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -356,17 +356,19 @@ $ <b>make obj</b>
 
 <h3 id="sig11">Сборка останавливается из-за ошибки "Signal 11"</h3>
 
-Building OpenBSD and other programs from source is a task which pushes hardware
-harder than most others, making intensive use of CPU, disk and memory.
-Signal 11 failures are <i>typically</i> caused by hardware problems.
+Сборка OpenBSD и других программ из исходников гораздо сильнее нагружает
+аппаратную часть машины (интенсивно используется процессор, жеский диск и
+память), чем большинство других задач.
+Signal 11 <i>обычно</i> возникает при аппаратных проблемах.
 
 <p>
-You will probably find it best to repair or replace the components that are
-causing trouble, as problems may show themselves in other ways in the future.
+Имеет смысл поченить или заменить компоненты, которые приводят к этой
+проблеме, так как они скорее всего будут проявлять себя и в будущем.
 
 <p>
-For much more information, see the
+Для получения дополнительной информации смотрите
 <a href="https://www.bitwizard.nl/sig11/">Sig11 FAQ</a>.
+
 
 <h2 id="Miscellanea">Разные вопросы и советы</h2>
 
