--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -362,7 +362,7 @@ $ <b>make obj</b>
 Signal 11 <i>обычно</i> возникает при аппаратных проблемах.
 
 <p>
-Имеет смысл поченить или заменить компоненты, которые приводят к этой
+Имеет смысл починить или заменить компоненты, которые приводят к этой
 проблеме, так как они скорее всего будут проявлять себя и в будущем.
 
 <p>
