--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -94,10 +94,11 @@ If you find a bug, make sure it is <a href="../report.html">reported</a>.
       <a href="#Xbld">собрать X</a>
 </ul>
 
-Этот раздел FAQ расскажет и поможет в подготовке, необходимой для описанных выше шагов.
-Осовное руководство по этой находится в <a href="https://man.openbsd.org/release">release(8)</a>.
+Этот раздел FAQ расскажет и поможет в подготовке, необходимой для
+описанных выше шагов. Осовное руководство по этой теме находится в
+<a href="https://man.openbsd.org/release">release(8)</a>.
 
-<h3 id="BldBinary">Upgrading to the Closest Available Binaries</h3>
+<h3 id="BldBinary">Обновление бинарников до следующих доступных версий</h3>
 
 Do not attempt to go from one release to another by compiling from source.
 
@@ -147,7 +148,7 @@ directories and set their permissions manually.
 # <b>chmod 775  xenocara ports</b>
 </pre>
 
-<h4>Fetching -stable</h4>
+<h4>Загрузка -stable</h4>
 
 To fetch the -stable <code>src</code> tree, specify the branch you want with
 the <code>-r</code> flag:
@@ -169,7 +170,7 @@ as appropriate.
 As all parts of OpenBSD must be kept in sync, all the trees you use should be
 checked out and updated at the same time.
 
-<h4>Fetching -current</h4>
+<h4>Загрузка -current</h4>
 
 To fetch a -current src tree, you can use the following:
 
